--- a/styles/skeleton.css
+++ b/styles/skeleton.css
@@ -26,7 +26,6 @@
 	align-items: center;
 	border-radius: 4px;
 	gap: 0.3rem;
-	height: 180px;
 	/* border-radius: 4px; */
 	padding: 0;
 	overflow: hidden;
@@ -53,7 +52,5 @@
 
 /* MOBILE */
 @media screen and (max-width: 650px) {
-	.card-skeleton {
-		height: 160px;
-	}
+	/*  */
 }
